--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Péndulo Invertido — ESP32 MQTT</title>
+  <title>Péndulo Invertido control</title>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>📡 Dashboard del Péndulo Invertido</h1>
+  <h1>pendulo control</h1>
   <div class="status" id="status">Conectando a HiveMQ...</div>
   <div id="lastValue">Último θ: -- °</div>
   <canvas id="chart" width="600" height="300"></canvas>
@@ -132,3 +132,4 @@
   </script>
 </body>
 </html>
+
