--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
       font-size: 15px;
     }
     canvas {
-      background-color: #161b22;
+      background-color: #FFFFFF;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
       margin-top: 20px;
@@ -132,4 +132,5 @@
   </script>
 </body>
 </html>
+
 
