--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      background-color: #0d1117;
+      background-color: #FFFFFF;
       color: #e6edf3;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
@@ -22,7 +22,7 @@
       font-size: 15px;
     }
     canvas {
-      background-color: #FFFFFF;
+      background-color: #161b22;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
       margin-top: 20px;
