--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      background-color: #FFFFFF;
+      background: #f20000;
+background: linear-gradient(90deg, rgba(242, 0, 0, 1) 0%, rgba(179, 57, 57, 1) 50%, rgba(0, 0, 0, 1) 100%);
       color: #e6edf3;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
@@ -132,5 +133,6 @@
   </script>
 </body>
 </html>
+
 
 
