--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@ background: linear-gradient(90deg, rgba(242, 0, 0, 1) 0%, rgba(179, 57, 57, 1) 5
       padding: 20px;
     }
     h1 {
-      color: #58a6ff;
+      color: #000000;
       margin-bottom: 10px;
     }
     .status {
@@ -37,7 +37,7 @@ background: linear-gradient(90deg, rgba(242, 0, 0, 1) 0%, rgba(179, 57, 57, 1) 5
   </style>
 </head>
 <body>
-  <h1>pendulo control</h1>
+  <h1>PENDULO CONTROL</h1>
   <div class="status" id="status">Conectando a HiveMQ...</div>
   <div id="lastValue">Último θ: -- °</div>
   <canvas id="chart" width="600" height="300"></canvas>
@@ -133,6 +133,7 @@ background: linear-gradient(90deg, rgba(242, 0, 0, 1) 0%, rgba(179, 57, 57, 1) 5
   </script>
 </body>
 </html>
+
 
 
 
