--- a/dashboard.html
+++ b/dashboard.html
@@ -32,13 +32,13 @@ background: radial-gradient(circle, rgba(191, 65, 80, 1) 0%, rgba(0, 0, 0, 1) 10
       font-size: 22px;
       font-weight: bold;
       margin-top: 15px;
-      color: #00ffb7;
+      color: #000000;
     }
   </style>
 </head>
 <body>
   <h1>PENDULO CONTROL</h1>
-  <div class="status" id="status">Conectando a HiveMQ...</div>
+  <div class="status" id="status">Conectando</div>
   <div id="lastValue">Último θ: -- °</div>
   <canvas id="chart" width="600" height="300"></canvas>
 
@@ -133,6 +133,7 @@ background: radial-gradient(circle, rgba(191, 65, 80, 1) 0%, rgba(0, 0, 0, 1) 10
   </script>
 </body>
 </html>
+
 
 
 
